# t4.nix

./: .gitignore  Makefile  README.org  build-all.nix  flake.nix  format-check.nix  stdenv-matrix.nix
templates/general/: flake.nix
templates/haskell-stack/: .gitignore  README.org  flake.nix  package.yaml  stack.yaml  template.cabal
templates/haskell-stack/src/: Lib.hs
templates/rust/: Cargo.toml  README.md  flake.nix
templates/rust-yew/: Cargo.toml  README.org
